--- a/app/src/main/res/layout/activity_top_places_to_see.xml
+++ b/app/src/main/res/layout/activity_top_places_to_see.xml
@@ -4,6 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activities.PlaceDetailActivity">
+    tools:context=".ui.activities.TopPlacesToSeeActivity">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </android.support.constraint.ConstraintLayout>
