--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="primaryColor">#00e5ff</color>
+    <color name="primaryLightColor">#6effff</color>
+    <color name="primaryDarkColor">#00b2cc</color>
+    <color name="primaryTextColor">#000000</color>
 </resources>
