--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/image_city_2"
+    style=""
+    android:background="@drawable/image_city_1"
     tools:context=".ui.activities.MainActivity">
 
     <CheckBox
@@ -19,9 +20,10 @@
         android:onClick="onLocationPermissionClicked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/bt_gps"
+        app:layout_constraintHorizontal_bias="0.368"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.943" />
+        app:layout_constraintVertical_bias="0.982" />
 
 
     <Button
@@ -38,36 +40,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_search"
         app:layout_constraintVertical_bias="0.867" />
 
     <SearchView
         android:id="@+id/searchView"
-        android:layout_width="335dp"
-        android:layout_height="37dp"
+        android:layout_width="0dp"
+        android:layout_height="54dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:queryHint="@string/search_here"
-        android:background="#E9CFCF"
+        android:layout_marginTop="252dp"
+        android:background="@color/primaryLightColor"
         android:iconifiedByDefault="false"
+        android:queryHint="@string/search_city"
+        android:textColorHint="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_search_fav_city_text" />
-
-    <TextView
-        android:id="@+id/tv_search_fav_city_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="164dp"
-        android:text="@string/search_city"
-        android:textColor="@color/primaryTextColor"
-        android:textSize="@dimen/text_size_21"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
