--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryColor">#00e5ff</color>
-    <color name="primaryLightColor">#6effff</color>
-    <color name="primaryDarkColor">#00b2cc</color>
+    <color name="primaryColor">#4caf50</color>
+    <color name="primaryLightColor">#80e27e</color>
+    <color name="primaryDarkColor">#087f23</color>
     <color name="primaryTextColor">#000000</color>
 </resources>
