style: navigation UP, styles

--- a/app/src/main/res/layout/activity_city_content.xml
+++ b/app/src/main/res/layout/activity_city_content.xml
@@ -13,6 +13,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginTop="8dp"
+        android:padding="@dimen/dp8"
+        android:background="@color/primaryLightColor"
+        android:textSize="@dimen/text_size_16"
         android:text="@string/top_places_to_see"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_city_main_snippet" />
@@ -24,6 +27,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:padding="@dimen/dp8"
+        android:textSize="@dimen/text_size_16"
+        android:background="@color/primaryLightColor"
         android:text="@string/top_places_to_eat"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/bt_test_top_places_to_see"
@@ -33,8 +39,11 @@
         android:id="@+id/bt_test_top_scoring_tags"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="@dimen/dp8"
         android:layout_marginEnd="8dp"
+        android:textSize="@dimen/text_size_16"
         android:layout_marginStart="8dp"
+        android:background="@color/primaryLightColor"
         android:layout_marginTop="44dp"
         android:text="@string/top_scoring_tag_for_location"
         app:layout_constraintEnd_toEndOf="parent"
