--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,12 +3,14 @@
     <dimen name="text_size_14">14sp</dimen>
     <dimen name="text_size_16">16sp</dimen>
     <dimen name="text_size_21">21sp</dimen>
+    <dimen name="text_size_24">24sp</dimen>
     <dimen name="text_size_26">26sp</dimen>
     <dimen name="text_size_28">28sp</dimen>
     <dimen name="text_size_30">30sp</dimen>
     <dimen name="text_size_32">32sp</dimen>
     <dimen name="text_size_34">34sp</dimen>
     <dimen name="text_size_36">36sp</dimen>
+    <dimen name="text_size_50">50sp</dimen>
     <dimen name="dp4">4dp</dimen>
     <dimen name="dp8">8dp</dimen>
     <dimen name="dp16">16dp</dimen>
