--- a/app/src/main/res/layout/activity_city_content.xml
+++ b/app/src/main/res/layout/activity_city_content.xml
@@ -59,6 +59,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:textSize="@dimen/text_size_16"
+        android:fontFamily="serif"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +71,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:textSize="@dimen/text_size_21"
+        android:fontFamily="sans-serif-condensed"
+        android:textSize="@dimen/text_size_32"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
