--- a/app/src/main/res/layout/adapter_top_places_to_eat.xml
+++ b/app/src/main/res/layout/adapter_top_places_to_eat.xml
@@ -25,6 +25,7 @@
         android:layout_marginStart="16dp"
         android:textSize="@dimen/text_size_21"
         android:layout_marginTop="8dp"
+        android:fontFamily="sans-serif-condensed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -39,6 +40,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="@dimen/text_size_16"
+        android:fontFamily="serif"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/iv_image"
         app:layout_constraintTop_toBottomOf="@+id/tv_name" />
