--- a/app/src/main/res/layout/adapter_top_places_to_see.xml
+++ b/app/src/main/res/layout/adapter_top_places_to_see.xml
@@ -26,6 +26,7 @@
         android:layout_marginStart="16dp"
         android:textSize="@dimen/text_size_21"
         android:layout_marginTop="8dp"
+        android:fontFamily="sans-serif-condensed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,6 +37,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:fontFamily="serif"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:textSize="@dimen/text_size_16"
