--- a/app/src/main/res/layout/adapter_top_scored_tags_for_location.xml
+++ b/app/src/main/res/layout/adapter_top_scored_tags_for_location.xml
@@ -25,6 +25,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:textSize="@dimen/text_size_21"
+        android:fontFamily="sans-serif-condensed"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +38,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:textSize="@dimen/text_size_16"
+        android:textSize="@dimen/text_size_21"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/iv_image"
@@ -52,11 +54,13 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:adjustViewBounds="true"
+        android:fontFamily="serif"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/iv_image"
         app:layout_constraintTop_toBottomOf="@+id/tv_price"
-        app:layout_constraintVertical_bias="0.818" />
+        app:layout_constraintVertical_bias="0.295" />
 
 </android.support.constraint.ConstraintLayout>
