--- a/app/src/main/res/layout/ingredients_widget_item.xml
+++ b/app/src/main/res/layout/ingredients_widget_item.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+        android:background="@color/primaryDarkColor"
         android:elevation="@dimen/cardview_default_elevation">
 
         <TextView
@@ -27,6 +27,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:background="@color/primaryLightColor"
         android:layout_height="wrap_content">
 
         <TextView
