--- a/app/src/main/res/layout/activity_city_content.xml
+++ b/app/src/main/res/layout/activity_city_content.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,10 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginTop="8dp"
-        android:padding="@dimen/dp8"
         android:background="@color/primaryLightColor"
-        android:textSize="@dimen/text_size_16"
+        android:padding="@dimen/dp8"
         android:text="@string/top_places_to_see"
+        android:textSize="@dimen/text_size_16"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_city_main_snippet" />
 
@@ -27,10 +26,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:padding="@dimen/dp8"
-        android:textSize="@dimen/text_size_16"
         android:background="@color/primaryLightColor"
+        android:padding="@dimen/dp8"
         android:text="@string/top_places_to_eat"
+        android:textSize="@dimen/text_size_16"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/bt_test_top_places_to_see"
         app:layout_constraintTop_toBottomOf="@+id/tv_city_main_snippet" />
@@ -39,13 +38,13 @@
         android:id="@+id/bt_test_top_scoring_tags"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp8"
         android:layout_marginEnd="8dp"
-        android:textSize="@dimen/text_size_16"
         android:layout_marginStart="8dp"
-        android:background="@color/primaryLightColor"
         android:layout_marginTop="44dp"
+        android:background="@color/primaryLightColor"
+        android:padding="@dimen/dp8"
         android:text="@string/top_scoring_tag_for_location"
+        android:textSize="@dimen/text_size_16"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,8 +57,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:textSize="@dimen/text_size_16"
         android:fontFamily="serif"
+        android:textSize="@dimen/text_size_16"
+        android:transitionName="snippetTransition"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,9 +71,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-condensed"
         android:textSize="@dimen/text_size_32"
-        android:layout_marginTop="8dp"
+        android:transitionName="nameTransition"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
