--- a/app/src/main/res/layout/activity_city_main.xml
+++ b/app/src/main/res/layout/activity_city_main.xml
@@ -25,6 +25,7 @@
                 android:id="@+id/ThreeTwoImage"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:transitionName="imageTransition"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
