--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,8 @@
         <item name="android:windowBackground">@color/backgroundPrimaryColor</item>
         <item name="android:itemBackground">@color/primaryColor</item>
         <item name="android:itemTextAppearance">@style/MyActionBar.MenuTextStyle</item>
+        <item name="android:windowActivityTransitions">true</item>
+
     </style>
 
     <style name="AppTheme.Detail">
