style: design Activity Transition

--- a/app/src/main/res/layout/adapter_city_result.xml
+++ b/app/src/main/res/layout/adapter_city_result.xml
@@ -17,7 +17,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:adjustViewBounds="true"
-            android:transitionName="imageTransition"
+            android:transitionName="@string/image_transition"
             android:contentDescription="@string/thumbnail"
             android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:transitionName="nameTransition"
+            android:transitionName="@string/name_transition"
             android:layout_marginTop="8dp"
             android:fontFamily="sans-serif-condensed"
             android:textSize="@dimen/text_size_16"
@@ -42,7 +42,7 @@
         <TextView
             android:id="@+id/tv_city_snippet"
             android:layout_width="0dp"
-            android:transitionName="snippetTransition"
+            android:transitionName="@string/snippet_transition"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
