--- a/app/src/main/res/layout/activity_city_content.xml
+++ b/app/src/main/res/layout/activity_city_content.xml
@@ -59,7 +59,7 @@
         android:layout_marginTop="8dp"
         android:fontFamily="serif"
         android:textSize="@dimen/text_size_16"
-        android:transitionName="snippetTransition"
+        android:transitionName="@string/snippet_transition"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +74,7 @@
         android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-condensed"
         android:textSize="@dimen/text_size_32"
-        android:transitionName="nameTransition"
+        android:transitionName="@string/name_transition"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
