--- a/app/src/main/res/layout/activity_city_main.xml
+++ b/app/src/main/res/layout/activity_city_main.xml
@@ -22,10 +22,10 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <pl.futuredev.capstoneproject.ui.activities.ThreeTwoImageView
-                android:id="@+id/ThreeTwoImage"
+                android:id="@+id/threeTwoImage"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:transitionName="imageTransition"
+                android:transitionName="@string/image_transition"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
