--- a/app/src/main/res/layout/activity_city_content.xml
+++ b/app/src/main/res/layout/activity_city_content.xml
@@ -8,47 +8,38 @@
 
     <Button
         android:id="@+id/bt_test_top_places_to_see"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/primaryLightColor"
-        android:padding="@dimen/dp8"
-        android:text="@string/top_places_to_see"
-        android:textSize="@dimen/text_size_16"
+        android:layout_width="189dp"
+        android:layout_height="93dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/sightseeing_group"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_city_main_snippet" />
+        app:layout_constraintTop_toBottomOf="@+id/bt_test_top_places_to_eat" />
 
     <Button
         android:id="@+id/bt_test_top_places_to_eat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="190dp"
+        android:layout_height="83dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/primaryLightColor"
-        android:padding="@dimen/dp8"
-        android:text="@string/top_places_to_eat"
-        android:textSize="@dimen/text_size_16"
+        android:background="@drawable/food_group"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/bt_test_top_places_to_see"
-        app:layout_constraintTop_toBottomOf="@+id/tv_city_main_snippet" />
+        app:layout_constraintHorizontal_bias="0.038"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bt_test_top_scoring_tags" />
 
     <Button
         android:id="@+id/bt_test_top_scoring_tags"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="44dp"
-        android:background="@color/primaryLightColor"
-        android:padding="@dimen/dp8"
-        android:text="@string/top_scoring_tag_for_location"
-        android:textSize="@dimen/text_size_16"
+        android:layout_width="190dp"
+        android:layout_height="82dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/tour_group"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.071"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_test_top_places_to_see" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_best_places" />
 
     <TextView
         android:id="@+id/tv_city_main_snippet"
@@ -56,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="serif"
         android:textSize="@dimen/text_size_16"
         android:transitionName="@string/snippet_transition"
@@ -78,5 +69,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_best_places"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="36dp"
+        android:fontFamily="serif"
+        android:text="@string/best_places"
+        android:textSize="@dimen/text_size_21"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_city_main_snippet" />
 
 </android.support.constraint.ConstraintLayout>
