--- a/app/src/main/res/layout/activity_favourites_city.xml
+++ b/app/src/main/res/layout/activity_favourites_city.xml
@@ -37,6 +37,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/my_recycler_view"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        android:contentDescription="@string/image_displaying_no_favourite_cities" />
 
 </android.support.constraint.ConstraintLayout>
