--- a/app/src/main/res/layout/activity_top_places_to_see.xml
+++ b/app/src/main/res/layout/activity_top_places_to_see.xml
@@ -25,7 +25,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        android:contentDescription="@string/image_displaying_no_favourite_cities" />
 
     <TextView
         android:id="@+id/tv_no_found_city"
